--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,5 +39,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      console.log('in index.html');
+      console.log(window.ipcRenderer);
+    </script>
   </body>
 </html>
